--- a/views/create_book.erb
+++ b/views/create_book.erb
@@ -1,11 +1,24 @@
 <form action="/createbook" method="post">
-  <label for="title">BOOK TITLE</label>
-    <input type="title" name="book_title"><br>
-    
-    <input type="url" name="url">
-    <textarea name="description" rows=4 cols=60></textarea>
-    
-    <input type="submit" value="add" name="add">
-    
-    <input type="submit" value="作成" name="commit" class="btn btn-primary">
+  
+    <label for="title">BOOK TITLE :</label><br>
+    <input type="title" name="book_title"><br><br>
+
+  <div id="contents">
+    <label for="url">URL :</label><br>
+    <input type="url" name="url"><br>
+    <label for="url_title">URL TILTE :</label><br>
+    <input type="title" name="url_title"><br><br>
+
+    <label for="descripion">CONTENT :</label><br>
+    <textarea name="content" rows=4 cols=60></textarea><br>
+  </div>
+
+  <input type="submit" value="作成" name="create" class="btn btn-primary">
+
 </form>
+
+<footer>
+  <label for="add">ADD :</label>
+  <input type="button" value="URL" name="url_add" id="url_add" class="btn btn-primary">
+  <input type="button" value="DESCRIPTION" name="desc_add" id="desc_add" class="btn btn-primary">
+</footer>
