--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,2 @@
-<% unless session[:user] %>
-  <a href="/signin">ログイン</a>
-  <a href="/signup">新規登録</a><br>
-<% end %>
+<a href="/signin">ログイン</a>
+<a href="/signup">新規登録</a>
